--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-paper": "^4.5.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-vector-icons": "^7.1.0",
+    "react-navigation-stack": "^2.10.2",
     "react-query": "^3.5.5"
   },
   "devDependencies": {
