--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint src --ext .ts,.tsx && prettier --check src/**/*.ts",
-    "fmt": "prettier --write src/**/*.ts? && eslint --fix src --ext .ts,.tsx"
+    "lint": "eslint src --ext .ts,.tsx && prettier --check 'src/**/*.ts?(x)'",
+    "fmt": "prettier --write 'src/**/*.ts?(x)' && eslint --fix src --ext .ts,.tsx"
   },
   "dependencies": {
     "react": "16.13.1",
