Add and show plants (#8)
fix #13 

## Description

This flow now works:

- Empty home screen just shows a button. Tap it.
- choose a contact
- choose a plant kind (cactus, circle tree, etc.)
- choose a watering frequency
- see all of the plants you've added on the Home screen.

There's no persistence or styling yet.

## Testing

There's 100% test coverage for .ts files, but I haven't done any integration-style tests yet, which would exercise the screens.

There are a lot of test snapshots, which make the diff seem big.

This PR involves many tweaks to config to get Jest to play nicely with our React Native libraries.

## iOS Screenshots

<img width="440" alt="Screenshot 2020-12-26 at 22 18 52" src="https://user-images.githubusercontent.com/4691093/103160057-7b253780-47c8-11eb-8321-32221ff58cd2.png">
<img width="409" alt="Screenshot 2020-12-26 at 22 18 58" src="https://user-images.githubusercontent.com/4691093/103160054-7a8ca100-47c8-11eb-9045-06cc421bd606.png">
<img width="421" alt="Screenshot 2020-12-26 at 22 19 04" src="https://user-images.githubusercontent.com/4691093/103160053-79f40a80-47c8-11eb-9f61-4383f09aaa56.png">
<img width="453" alt="Screenshot 2020-12-26 at 22 19 15" src="https://user-images.githubusercontent.com/4691093/103160052-782a4700-47c8-11eb-86e8-d040bf7adbec.png">


## Android Screenshots

<img width="375" alt="home-after-adding" src="https://user-images.githubusercontent.com/4691093/103159874-765f8400-47c6-11eb-94a2-d22c06649441.png">
<img width="383" alt="choice" src="https://user-images.githubusercontent.com/4691093/103159872-75c6ed80-47c6-11eb-87c6-bb181d3d0961.png">

<img width="374" alt="choice-kind" src="https://user-images.githubusercontent.com/4691093/103159870-73fd2a00-47c6-11eb-8726-738bd2bd2512.png">

--- a/package.json
+++ b/package.json
@@ -6,39 +6,69 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --coverage",
     "lint": "eslint src --ext .ts,.tsx && prettier --check 'src/**/*.ts?(x)'",
     "fmt": "prettier --write 'src/**/*.ts?(x)' && eslint --fix src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.9.8",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-get-random-values": "^1.5.0",
+    "react-native-paper": "^4.5.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
+    "react-native-select-contact": "^1.5.0",
+    "react-native-super-grid": "^4.0.3",
+    "react-native-vector-icons": "^7.1.0",
+    "recoil": "^0.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react-dom": "^17.0.1",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
+    "setupFiles": [
+      "./jest/setup.js"
+    ],
+    "coverageThreshold": {
+      "./src": {
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
+      },
+      "./src/*.ts": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-navigation|react-native-iphone-x-helper|react-native-vector-icons|@react-native-community/picker)/"
     ]
   }
 }
