--- a/.github/workflows/forester-ci.yml
+++ b/.github/workflows/forester-ci.yml
@@ -25,5 +25,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn install --frozen-lockfile
-    - run: yarn run lint 
-    - run: yarn run test
+    - run: yarn test:ci
