--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest --coverage",
     "lint": "eslint src --ext .ts,.tsx && prettier --check 'src/**/*.ts?(x)'",
-    "fmt": "prettier --write 'src/**/*.ts?(x)' && eslint --fix src --ext .ts,.tsx"
+    "fmt": "prettier --write 'src/**/*.ts?(x)' && eslint --fix src --ext .ts,.tsx",
+    "test:ci": "concurrently 'yarn test' 'yarn lint' 'yarn tsc'"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -41,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
+    "concurrently": "^5.3.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
