--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,5 +24,9 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+# Override default size limit 6MB to avoid `database or disk is full` error
+# https://blog.jscrambler.com/how-to-use-react-native-asyncstorage/
+AsyncStorage_db_size_in_MB=10
+
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
