--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test:ci": "concurrently 'yarn test' 'yarn lint' 'yarn tsc'"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.9.8",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@types/": "react-native-async-storage/async-storage",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.9.0",
