--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:ci": "concurrently 'yarn test' 'yarn lint' 'yarn tsc'"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.9.8",
     "@react-navigation/native": "^5.8.10",
