add telprompt to info.plist

--- a/ios/Forester/Info.plist
+++ b/ios/Forester/Info.plist
@@ -24,6 +24,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+    	<string>telprompt</string>
+    	<string>tel</string>
+	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
